--- a/css/layout.css
+++ b/css/layout.css
@@ -128,7 +128,7 @@ section:not(#hero) {
 .photo-personal {
   position: absolute;
   bottom: 0;
-  right: -20px;
+  right: 0;
   z-index: 2;
   width: 55%;
   transform: rotate(-3deg);
